[package]
name = "typenum-ratio"
edition = "2018"
version = "0.1.0"
authors = ["John Schug <john.ips.schug@gmail.com>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/typenum-ratio"
repository = "https://github.com/johnschug/typenum-ratio"
categories = ["no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typenum = "1.12.0"

[dev-dependencies]
static_assertions = "1.1.0"
